minor fixes on mobile ui, numbers are now displayed more clearly

--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -92,6 +92,10 @@ background-color: $black;
   letter-spacing: 1.1px;
 }
 
+.numbers {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .dark-theme {
   color: $black;
   background-color: rgba(248, 247, 245, .7);
