--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -57,6 +57,7 @@ $font-thick: 700;
 }
 
 @mixin title-price {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   text-decoration: none;
   color: rgb(38, 38, 38);
